--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,11 +3,10 @@ $second_color: #111;
 $header_color: #111;
 $color_text: #111;
 
-
-
 $font_size: 14px;
 
 body {
     font-size: $font_size;
-
-}
+    padding: 0;
+    margin: 0;
+} 
